<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    android:fitsSystemWindows="true"
    tools:context=".views.activities.LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:fitsSystemWindows="true"
        >

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="@color/colorPrimaryVariant"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@drawable/cover_login_appbar"
                app:layout_collapseMode="pin"
                >
            </androidx.appcompat.widget.AppCompatImageView>
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bac_for_activity"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:scrollbars="vertical"
            android:background="@drawable/login_bac_for_activity"
            >
            <ImageView
                android:id="@+id/log_image_person"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:src="@drawable/logo_book"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/login_et_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/et_email"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="10dp"
                    android:inputType="textEmailAddress"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/login_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/ic_open_password"
                    android:drawablePadding="10dp"
                    android:hint="@string/et_pass"
                    android:inputType="text|textPassword"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal" >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register_activity_log"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btn_register"
                    android:textSize="20sp"
                    android:backgroundTint="@color/brown"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="#E1FFFFFF"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    >

                </com.google.android.material.button.MaterialButton>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/logBtnLogin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_login"
                    android:textSize="20sp"
                    android:backgroundTint="@color/brown"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:textColor="#E1FFFFFF"
                    android:layout_margin="10dp"
                    >
                </com.google.android.material.button.MaterialButton>
            </LinearLayout>



        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>